--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="eng">
     <head>
       <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Agent Guide</title>
+    <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <h1 class="welcome">Welcome to Agent Guide</h1>
